Squashed commit of the following:
commit 2bf804a034106a69602b43bc93eb92f77972570c
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Aug 14 20:44:28 2025 +0100

    Untangling model package contents

commit 3e456463b6ba7be98ea7336167527fd2e5ec20d1
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Aug 14 18:25:58 2025 +0100

    reducing complexity

commit 47004ce3bde64593d6f16d36b72143eb1ad7e298
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Aug 14 18:22:00 2025 +0100

    Tidy up

commit 9b1a58e7c11ec82963fab22cfa2917992a380e20
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Aug 14 18:15:56 2025 +0100

    Fixed warnings

commit c982f845c1bdbdd9cc13141afe724468e6291b6e
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Aug 14 18:12:53 2025 +0100

    A working set of tests

commit 2d1ecdef87abe83d90fdb0e6f015ce7ad83b0817
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Aug 14 16:58:15 2025 +0100

    Tidy up

commit 1ad0ed75fd7a1cc0f45c978c3b1a31c991f54c78
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Aug 14 16:38:47 2025 +0100

    Just links from packages to types to go

commit 1e03ea5ea76511bd495548086b3b8d9b391b552c
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Aug 14 13:50:36 2025 +0100

    Links almost all working again

commit 9e97e20474839742079f90f02b8462acb775d0d4
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Aug 14 10:24:27 2025 +0100

    Fixed javadoc/doclet warnings

commit fe6902a8eaa2fdbb23f65d837a72589f181e2845
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Aug 14 09:57:28 2025 +0100

    Tidyng up refactor, reintroducing some tests

commit eb92fcf44e9050684380fbb73770ca5ffba5f498
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Wed Aug 13 19:28:54 2025 +0100

    Tests are passing

commit 921df2e9842bcdefc4fd27b9745b110f31dc4615
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Wed Aug 13 15:17:38 2025 +0100

    Removed one link() method f