@@ -2,23 +2,20 @@ package io.github.sandydunlop.markista.model;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /// An abstract class with a set of methods useful to other subclasses of [Node]
 /// that can be owners of types.
-public abstract class AbstractTypeOwner extends Node implements TypeOwner {
-
+public abstract class PackageOrTypeNode extends AbstractPackageMember {
     /// A list of types owned by this type owner
     protected List<TypeNode> types = new ArrayList<>();
 
     /// Default constructor
-    protected AbstractTypeOwner() {
+    protected PackageOrTypeNode() {
         // Only here for the comments
     }
 
     /// Adds a type to the list of types *owned* by this instance.
     /// @param typeNode the type to add
-    @Override
     public void addType(TypeNode typeNode) {
         types.add(typeNode);
     }
@@ -29,30 +26,22 @@ public abstract class AbstractTypeOwner extends Node implements TypeOwner {
     }
 
     /// Gets the list of classes *owned* by this instance.
-    public List<PackageMember> getClasses() {
-        return types.stream()
-                             .filter(item -> item.getKind() == TypeNode.Kind.CLASS)
-                             .collect(Collectors.toList());
+    public List<TypeNode> getClasses() {
+        return types.stream().filter(item -> item.getKind() == TypeNode.Kind.CLASS).toList();
     }
 
     /// Gets the list of interfaces *owned* by this instance.
-    public List<PackageMember> getInterfaces() {
-        return types.stream()
-                             .filter(item -> item.getKind() == TypeNode.Kind.INTERFACE)
-                             .collect(Collectors.toList());
+    public List<TypeNode> getInterfaces() {
+        return types.stream().filter(item -> item.getKind() == TypeNode.Kind.INTERFACE).toList();
     }
 
     /// Gets the list of enums *owned* by this instance.
-    public List<PackageMember> getEnums() {
-        return types.stream()
-                             .filter(item -> item.getKind() == TypeNode.Kind.ENUM)
-                             .collect(Collectors.toList());
+    public List<TypeNode> getEnums() {
+        return types.stream().filter(item -> item.getKind() == TypeNode.Kind.ENUM).toList();
     }
     /// Gets the list of annotations *owned* by this instance.
-    public List<PackageMember> getAnnotations() {
-        return types.stream()
-                             .filter(item -> item.getKind() == TypeNode.Kind.ANNOTATION)
-                             .collect(Collectors.toList());
+    public List<TypeNode> getAnnotations() {
+        return types.stream().filter(item -> item.getKind() == TypeNode.Kind.ANNOTATION).toList();
     }
 
     /// Adds a class to the list of classes *owned* by this instance.
